P2 finished and P1 fixes

--- a/P1_AutoGrad_onScalars.ipynb
+++ b/P1_AutoGrad_onScalars.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -644,8 +644,8 @@
     "        return 'Value: {self.value}, Gradient: {self.grad}'.format(self=self)\n",
     "    \n",
     "\n",
-    "a = Variable(4)   # a = 4\n",
-    "b = Variable(3)   # b = 3\n",
+    "a = Variable(4, requiresGrad = False)   # a = 4\n",
+    "b = Variable(3, requiresGrad = False)   # b = 3\n",
     "c = a + b\n",
     "c.requiresGrad = False\n",
     "res = c * a # res = a * c = 28\n",
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1129,30 +1129,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Derivative aproximation in x=2: 4.000000000115023\n"
+      "Derivative aproximation in x=3.2: 645.1200001151847\n"
      ]
     }
    ],
    "source": [
     "# Your Code Here\n",
     "def f(x):\n",
-    "    return x**2  # Example function: f(x) = x^2\n",
+    "    return 21*x**3  # Example function: f(x) = 21x^3\n",
     "\n",
     "def numerical_derivative(f, x, e=1e-6):\n",
     "    derivative = (f(x + e) - f(x - e)) / (2 * e)\n",
     "    return derivative\n",
     "\n",
-    "# Calculate derivative in x = 2\n",
-    "x = 2\n",
+    "# Calculate derivative in x = 3.2\n",
+    "x = 3.2\n",
     "derivative_approx = numerical_derivative(f, x)\n",
-    "print(\"Derivative aproximation in x=2:\", derivative_approx)"
+    "print(\"Derivative aproximation in x=3.2:\", derivative_approx)"
    ]
   }
  ],
